# SeqPatternMiner-cpp

./: .gitignore  CMakeLists.txt  README.md
include/spm/: sequential_pattern_miner.hpp  subsequence.hpp  types.hpp
src/: sequential_pattern_miner.cpp  subsequence.cpp
